Corrected Wrapping Style

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -25,10 +25,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .contact .social-networks-icons a {
-  margin: 0 10px;
+  margin: 10px;
   position: relative;
 }
 
